refactor(party): separate Crew/DJ into independent repositories (Phase 2)
Remove @OneToMany collections and 20 business methods from PartyroomData,
replacing with CrewRepository/DjRepository for independent persistence.
This eliminates loading the full aggregate for single-entity operations.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>